# musicbox

./: .gitignore  Cargo.toml  README.md
example/: chord_abstraction.rs  guitar.rs  mubot.rs  notary.rs  try_interval_calculations.rs  try_lambda.rs  use_makam.rs  use_musicbox.rs
src/: core.rs  fetchuser.rs  fill_harmonics.rs  interval.rs  lib.rs  makam.rs  mubot.rs  musical_string.rs  musicbox.rs  natural_music_box.rs  natural_musicbox.rs  string.rs  western_music_box.rs  western_musicbox.rs
src/chord/: chord_library.rs  mod.rs  zoot_allures.rs
src/chord_depr/: mod.rs  zoot_allures.rs
src/chords/: chord_library.rs  mod.rs
src/instrument/: guitar.rs  mod.rs
src/notary/: fills_notary.rs  mod.rs  scales.rs
src/notation/: mod.rs  zoot_allures.rs
src/scales/: chordlib.rs  mod.rs  mode.rs
src/score/: mod.rs  rhythm.rs
tests/: chord_abstraction.rs  fail_chord_constructor.rs  fail_use_chord_lib.rs  natural_music.rs  use_chord_lib.rs
