[package]
name = "musicbox"
version = "0.1.5"
author = "LifelessRelics <Holozetta@hologramhall.io"
repository = "https://github.com/LifelessRelics/musicbox.git"
description = "Generates a hashmap of musical notes de la musica"
license ="MIT"
edition = "2021"

[[example]]
name="try_interval_calculations"
path="example/try_interval_calculations.rs"
[[example]]
name="use_musicbox"
path="example/use_musicbox.rs"
[[example]]
name="use_makam"
path="example/use_makam.rs"


[dependencies]
