[package]
name = "musicbox"
version = "0.1.6"
author = "LifelessRelics <Holozetta@hologramhall.io"
repository = "https://github.com/LifelessRelics/musicbox.git"
description = "General Musical Framework for working with tonality"
license ="MIT"
edition = "2021"

[[example]]
name="try_interval_calculations"
path="example/try_interval_calculations.rs"
[[example]]
name="use_musicbox"
path="example/use_musicbox.rs"
[[example]]
name="use_makam"
path="example/use_makam.rs"
[[example]]
name="guitar"
path="example/guitar.rs"

[dependencies]
