[package]
name = "musicbox"
version = "0.2.2"
authors = ["LifelessRelics <Holozetta@hologramhall.io"]
repository = "https://github.com/LifelessRelics/musicbox.git"
description = "General Musical Framework for working with tonality"
license ="MIT"
edition = "2021"



[[example]]
name="chord_abstraction"
path="example/chord_abstraction.rs"

[[example]]
name="guitar"
path="example/guitar.rs"

[[example]]
name="notary"
path="example/notary.rs"

[[example]]
name="use_musicbox"
path="example/use_musicbox.rs"



[dependencies]
